--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -70,7 +70,7 @@ App::PropertyVector
 </p><p>&#1065;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1089; &#1076;&#1077;&#1089;&#1085;&#1080;&#1103; &#1073;&#1091;&#1090;&#1086;&#1085; &#1074;&#1098;&#1088;&#1093;&#1091; &#1092;&#1086;&#1085;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1088;&#1080; &#1086;&#1087;&#1094;&#1080;&#1080;:
 </p>
 <ul><li><b>Add Property</b>: &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1076;&#1080;&#1085;&#1072;&#1084;&#1080;&#1095;&#1085;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; &#1082;&#1098;&#1084; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.</li></ul>
-<ul><li><b>Expand/&#1057;&#1074;&#1080;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
+<ul><li><b>Expand/Collapse</b>: <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul>
 <dl><dd>&#1043;&#1088;&#1091;&#1087;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090; / &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1076;&#1074;&#1072;&#1081;&#1085;&#1086; &#1074;&#1098;&#1088;&#1093;&#1091; &#1080;&#1084;&#1077;&#1090;&#1086; &#1085;&#1072; &#1075;&#1088;&#1091;&#1087;&#1072;&#1090;&#1072;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1074;&#1098;&#1079;&#1083;&#1080; &#1089;&#1077; &#1089;&#1074;&#1080;&#1074;&#1072;&#1090;/&#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1089;&#1080;&#1084;&#1074;&#1086;&#1083;&#1072; (&#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;) &#1087;&#1088;&#1077;&#1076; &#1080;&#1084;&#1077;&#1090;&#1086; &#1080;&#1084;.</dd></dl>
 <dl><dd><ul><li><b>Expand to Default</b>: property groups are expanded and property nodes are collapsed for the current object.</li></ul></dd></dl>
 <dl><dd><ul><li><b>Expand All</b>: property groups and property nodes are expanded for the current object.</li></ul></dd></dl>
@@ -171,15 +171,15 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123181000
+Cached time: 20260124051732
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.174 seconds
+CPU time usage: 0.127 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 704/1000000
-Post&#8208;expand include size: 32353/2097152 bytes
-Template argument size: 12520/2097152 bytes
+Post&#8208;expand include size: 32321/2097152 bytes
+Template argument size: 12488/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -187,19 +187,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.505      1 -total
- 20.12%    9.760      1 Template:Std_Base_navi/bg
- 19.08%    9.256      3 Template:Navigation_menu_2
- 17.09%    8.288      1 Template:Interface_navi/bg
- 11.49%    5.572      1 Template:Userdocnavi/bg
-  9.65%    4.682      1 Template:PropertyData
-  7.00%    3.394      2 Template:Docnav
-  4.44%    2.155      1 Template:Code
-  4.36%    2.116      1 Template:Variable
-  3.98%    1.930      1 Template:TOCright
+100.00%   82.146      1 -total
+ 39.74%   32.643      1 Template:Std_Base_navi/bg
+ 16.36%   13.441      1 Template:Interface_navi/bg
+ 11.62%    9.548      3 Template:Navigation_menu_2
+  8.12%    6.667      1 Template:Userdocnavi/bg
+  5.99%    4.924      1 Template:PropertyData
+  3.91%    3.210      1 Template:Code
+  3.46%    2.842      1 Template:Caption
+  3.19%    2.621      2 Template:Value
+  3.18%    2.609      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123181000 and revision id 1743133. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260124051732 and revision id 1743137. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
