--- a/wiki/Macro_server.html
+++ b/wiki/Macro_server.html
@@ -125,14 +125,16 @@ Subsequent operations may require document/object/spreadsheet/path
 <p>this sets cell B1 (in global or active document and spreadsheet) to value 123
 </p>
 <h4><span class="mw-headline" id="Commands">Commands</span></h4>
-<p><i>D</i> - get list of open documents
-</p><p><i>O[&lt;document&gt;]</i> - get list of objects
-</p><p><i>C[&lt;document&gt;] [&lt;spreadsheet&gt;]</i> - get list of cells
+<p><i>I</i> - get server id
+</p><p><i>D</i> - get list of open documents in form&nbsp;: d&lt;document&gt;
+</p><p><i>O[&lt;document&gt;]</i> - get list of objects in form&nbsp;: o&lt;object&gt; &lt;label&gt;
+</p><p><i>C[&lt;document&gt;] [&lt;spreadsheet&gt;]</i> - get list of cells in form&nbsp;: c&lt;cell-id&gt; &lt;value&gt;
 </p><p><i>d&lt;document&gt;</i> - select document
 </p><p><i>s[&lt;document&gt;] &lt;spreadsheet&gt;</i> - select spreadsheet
 </p><p><i>o[&lt;document&gt;] &lt;object-name&gt;</i> - select object
 </p><p><i>p &lt;file-path&gt;</i> - select/set path
-</p><p><i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value
+<i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value
+</p><p><i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value in form&nbsp;: c&lt;cell-id&gt; &lt;value&gt;
 </p><p><i>!&lt;cell-id&gt; &lt;value&gt;</i>&nbsp;- set cell value
 </p><p><i>r[&lt;document&gt;]</i> - recompute document
 </p><p><i>e[&lt;object&gt;] [&lt;file-path&gt;]</i> - export selected object
@@ -689,12 +691,12 @@ freecad-ctl.py</p><div class="mw-highlight mw-highlight-lang-python3 mw-content-
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123213237
+Cached time: 20260124052422
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.080 seconds
+Real time usage: 0.085 seconds
 Preprocessor visited node count: 174/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 323/2097152 bytes
@@ -705,11 +707,11 @@ Unstrip post&#8208;expand size: 77906/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.193      1 Template:Macro
-100.00%    3.193      1 -total
+100.00%    5.002      1 Template:Macro
+100.00%    5.002      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412380-0!canonical and timestamp 20260123213300 and revision id 1743135. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412380-0!canonical and timestamp 20260124052448 and revision id 1743138. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
