--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -7,12 +7,14 @@
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel &uacute;kol&#367; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p>The <a href="../Task_Panel.html" title="Task Panel">Task Panel</a> appears as a stand-alone <a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a> panel called <b>Tasks</b>. It is a customizable space that is able to contain any type of graphical widgets like input fields, checkboxes, spinboxes, buttons, labels, images, and other elements, depending on the currently active tool.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
@@ -87,13 +89,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124052723
+Cached time: 20260124052730
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.143 seconds
-Preprocessor visited node count: 401/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.131 seconds
+Preprocessor visited node count: 402/1000000
 Post&#8208;expand include size: 32569/2097152 bytes
 Template argument size: 11895/2097152 bytes
 Highest expansion depth: 5/100
@@ -103,18 +105,18 @@ Unstrip post&#8208;expand size: 2284/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.246      1 -total
- 31.92%   12.527      1 Template:Std_Base_navi/bg
- 25.32%    9.939      3 Template:Navigation_menu_2
- 25.23%    9.902      1 Template:Interface_navi/bg
- 17.29%    6.786      1 Template:Userdocnavi/bg
-  7.39%    2.899      2 Template:Caption
-  6.40%    2.512      1 Template:TOCright
-  4.92%    1.932      2 Template:Button
-  4.22%    1.655      3 Template:KEY
+100.00%   31.179      1 -total
+ 32.96%   10.277      1 Template:Std_Base_navi/bg
+ 29.61%    9.233      3 Template:Navigation_menu_2
+ 25.94%    8.087      1 Template:Interface_navi/bg
+ 17.84%    5.562      1 Template:Userdocnavi/bg
+  7.79%    2.429      2 Template:Caption
+  6.27%    1.954      3 Template:KEY
+  3.58%    1.117      2 Template:Button
+  3.25%    1.013      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124052722 and revision id 1743142. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124052730 and revision id 1743144. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
