--- a/wiki/Macro_server.html
+++ b/wiki/Macro_server.html
@@ -129,14 +129,16 @@ Subsequent operations may require document/object/spreadsheet/path
 </p><p><i>D</i> - get list of open documents in form&nbsp;: d&lt;document&gt;
 </p><p><i>O[&lt;document&gt;]</i> - get list of objects in form&nbsp;: o&lt;object&gt; &lt;label&gt;
 </p><p><i>C[&lt;document&gt;] [&lt;spreadsheet&gt;]</i> - get list of cells in form&nbsp;: c&lt;cell-id&gt; &lt;value&gt;
-</p><p><i>d&lt;document&gt;</i> - select document
+</p><p><br>
+<i>d&lt;document&gt;</i> - select document
 </p><p><i>s[&lt;document&gt;] &lt;spreadsheet&gt;</i> - select spreadsheet
 </p><p><i>o[&lt;document&gt;] &lt;object-name&gt;</i> - select object
 </p><p><i>p &lt;file-path&gt;</i> - select/set path
-<i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value
-</p><p><i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value in form&nbsp;: c&lt;cell-id&gt; &lt;value&gt;
+</p><p><br>
+<i>@&lt;cell-id&gt; [&lt;spreadsheet&gt;]</i> - get cell value in form&nbsp;: c&lt;cell-id&gt; &lt;value&gt;
 </p><p><i>!&lt;cell-id&gt; &lt;value&gt;</i>&nbsp;- set cell value
-</p><p><i>r[&lt;document&gt;]</i> - recompute document
+</p><p><br>
+<i>r[&lt;document&gt;]</i> - recompute document
 </p><p><i>e[&lt;object&gt;] [&lt;file-path&gt;]</i> - export selected object
 </p>
 <h4><span class="mw-headline" id="Examples">Examples</span></h4><p>
@@ -691,12 +693,12 @@ freecad-ctl.py</p><div class="mw-highlight mw-highlight-lang-python3 mw-content-
 </pre></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124052422
+Cached time: 20260124052913
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.085 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.091 seconds
 Preprocessor visited node count: 174/1000000
 Post&#8208;expand include size: 2239/2097152 bytes
 Template argument size: 323/2097152 bytes
@@ -707,11 +709,11 @@ Unstrip post&#8208;expand size: 77906/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.002      1 Template:Macro
-100.00%    5.002      1 -total
+100.00%    4.914      1 Template:Macro
+100.00%    4.914      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412380-0!canonical and timestamp 20260124052448 and revision id 1743138. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412380-0!canonical and timestamp 20260124052913 and revision id 1743145. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
