--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -15,7 +15,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>The <a class="mw-selflink selflink">&#1055;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1079;&#1072;&#1082;&#1086;&#1090;&#1074;&#1077;&#1085; (<a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a>) &#1087;&#1072;&#1085;&#1077;&#1083; &#1089;&#1098;&#1089; &#1079;&#1072;&#1075;&#1083;&#1072;&#1074;&#1080;&#1077; <b>Tasks</b>. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1077; &#1074; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1074;&#1089;&#1103;&#1082;&#1072;&#1082;&#1098;&#1074; &#1074;&#1080;&#1076; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1082;&#1072;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1074;&#1098;&#1074;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077;, &#1082;&#1074;&#1072;&#1076;&#1088;&#1072;&#1090;&#1095;&#1077;&#1090;&#1072; &#1079;&#1072; &#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1080;, &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1087;&#1088;&#1077;&#1074;&#1098;&#1088;&#1090;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;, &#1073;&#1091;&#1090;&#1086;&#1085;&#1080;, &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;, &#1080;&#1079;&#1086;&#1073;&#1088;&#1072;&#1078;&#1077;&#1085;&#1080;&#1103; &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;.
+<p><a class="mw-selflink selflink">&#1055;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1079;&#1072;&#1082;&#1086;&#1090;&#1074;&#1077;&#1085; (<a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a>) &#1087;&#1072;&#1085;&#1077;&#1083; &#1089;&#1098;&#1089; &#1079;&#1072;&#1075;&#1083;&#1072;&#1074;&#1080;&#1077; <b>Tasks</b>. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1077; &#1074; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1074;&#1089;&#1103;&#1082;&#1072;&#1082;&#1098;&#1074; &#1074;&#1080;&#1076; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1082;&#1072;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1074;&#1098;&#1074;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077;, &#1082;&#1074;&#1072;&#1076;&#1088;&#1072;&#1090;&#1095;&#1077;&#1090;&#1072; &#1079;&#1072; &#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1080;, &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1087;&#1088;&#1077;&#1074;&#1098;&#1088;&#1090;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;, &#1073;&#1091;&#1090;&#1086;&#1085;&#1080;, &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;, &#1080;&#1079;&#1086;&#1073;&#1088;&#1072;&#1078;&#1077;&#1085;&#1080;&#1103; &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel showing various tools when the <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> is active, and a <a href="../Sketch.html" title="Sketch">sketch</a> is selected.</p>
@@ -89,12 +89,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124053335
+Cached time: 20260124053415
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.102 seconds
+CPU time usage: 0.095 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 402/1000000
 Post&#8208;expand include size: 32569/2097152 bytes
 Template argument size: 11895/2097152 bytes
@@ -105,18 +105,18 @@ Unstrip post&#8208;expand size: 2284/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.856      1 -total
- 45.29%   11.256      1 Template:Std_Base_navi/bg
- 25.89%    6.435      3 Template:Navigation_menu_2
- 18.49%    4.595      1 Template:Interface_navi/bg
- 16.40%    4.076      1 Template:Userdocnavi/bg
-  4.87%    1.210      1 Template:TOCright
-  4.76%    1.182      2 Template:Caption
-  3.88%    0.964      3 Template:KEY
-  3.76%    0.936      2 Template:Button
+100.00%   38.177      1 -total
+ 32.64%   12.462      1 Template:Std_Base_navi/bg
+ 24.91%    9.511      1 Template:Interface_navi/bg
+ 20.35%    7.770      3 Template:Navigation_menu_2
+ 14.10%    5.382      1 Template:Userdocnavi/bg
+  8.04%    3.069      2 Template:Caption
+  7.01%    2.677      2 Template:Button
+  6.08%    2.323      3 Template:KEY
+  4.61%    1.758      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124053335 and revision id 1743147. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124053414 and revision id 1743150. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
