--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -18,7 +18,7 @@
 <p><a class="mw-selflink selflink">&#1055;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1079;&#1072;&#1082;&#1086;&#1090;&#1074;&#1077;&#1085; (<a href="../Combo_view.html#Dock_Task_Panel_on_top_of_Combo_View" class="mw-redirect" title="Combo view">dockable</a>) &#1087;&#1072;&#1085;&#1077;&#1083; &#1089;&#1098;&#1089; &#1079;&#1072;&#1075;&#1083;&#1072;&#1074;&#1080;&#1077; <b>Tasks</b>. &#1058;&#1086;&#1074;&#1072; &#1077; &#1087;&#1077;&#1088;&#1089;&#1086;&#1085;&#1072;&#1083;&#1080;&#1079;&#1080;&#1088;&#1072;&#1085;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1088;&#1072;&#1085;&#1089;&#1090;&#1074;&#1086;, &#1082;&#1086;&#1077;&#1090;&#1086; &#1077; &#1074; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072; &#1074;&#1089;&#1103;&#1082;&#1072;&#1082;&#1098;&#1074; &#1074;&#1080;&#1076; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1082;&#1072;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1074;&#1098;&#1074;&#1077;&#1078;&#1076;&#1072;&#1085;&#1077;, &#1082;&#1074;&#1072;&#1076;&#1088;&#1072;&#1090;&#1095;&#1077;&#1090;&#1072; &#1079;&#1072; &#1086;&#1090;&#1084;&#1077;&#1090;&#1082;&#1080;, &#1087;&#1086;&#1083;&#1077;&#1090;&#1072; &#1079;&#1072; &#1087;&#1088;&#1077;&#1074;&#1098;&#1088;&#1090;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;, &#1073;&#1091;&#1090;&#1086;&#1085;&#1080;, &#1077;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;, &#1080;&#1079;&#1086;&#1073;&#1088;&#1072;&#1078;&#1077;&#1085;&#1080;&#1103; &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074; &#1079;&#1072;&#1074;&#1080;&#1089;&#1080;&#1084;&#1086;&#1089;&#1090; &#1086;&#1090; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel.png&amp;filetimestamp=20191215005044&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel.png" decoding="async" width="250" height="292" class="mw-file-element" data-file-width="557" data-file-height="651"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel showing various tools when the <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> is active, and a <a href="../Sketch.html" title="Sketch">sketch</a> is selected.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1055;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;, &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1097; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign Workbench</a> &#1080; &#1077; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085; <a href="../Sketch.html" title="Sketch">sketch</a>.</p>
 <h2><span class="mw-headline" id="Working_with_the_Task_Panel">Working with the Task Panel</span></h2>
 <p>A Task Panel normally opens when a tool that requires user input is activated. If the tool doesn't need user input, it will produce its result or terminate, but won't display a Task Panel. The user input may be anything such as text, 3D point coordinates, elements from a list, faces from a shape, or options to modify the way the tool operates.
 </p><p>There are many tools that require the selection of shapes or objects. In such cases the Task Panel will wait for the user to select the appropriate objects from the <a href="../Tree_View.html" title="Tree View">Tree View</a> or the <a href="../3D_View.html" title="3D View">3D View</a>. When a Task Panel is open, it is possible to switch to the <a href="../Tree_View.html" title="Tree View">Tree View</a> to choose an object. Once this is done, it is possible to switch back to the Task Panel to proceed with the tool. The Task Panel is usually closed by clicking an <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> or a <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> button, or pressing the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span> key to abort the tool.
@@ -89,15 +89,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124053415
+Cached time: 20260124053814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.095 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.124 seconds
 Preprocessor visited node count: 402/1000000
-Post&#8208;expand include size: 32569/2097152 bytes
-Template argument size: 11895/2097152 bytes
+Post&#8208;expand include size: 32741/2097152 bytes
+Template argument size: 11981/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -105,18 +105,18 @@ Unstrip post&#8208;expand size: 2284/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.177      1 -total
- 32.64%   12.462      1 Template:Std_Base_navi/bg
- 24.91%    9.511      1 Template:Interface_navi/bg
- 20.35%    7.770      3 Template:Navigation_menu_2
- 14.10%    5.382      1 Template:Userdocnavi/bg
-  8.04%    3.069      2 Template:Caption
-  7.01%    2.677      2 Template:Button
-  6.08%    2.323      3 Template:KEY
-  4.61%    1.758      1 Template:TOCright
+100.00%   22.749      1 -total
+ 35.81%    8.146      1 Template:Std_Base_navi/bg
+ 28.24%    6.425      3 Template:Navigation_menu_2
+ 21.19%    4.821      1 Template:Interface_navi/bg
+ 16.94%    3.854      1 Template:Userdocnavi/bg
+  7.41%    1.687      1 Template:TOCright
+  7.34%    1.671      2 Template:Caption
+  4.41%    1.003      2 Template:Button
+  4.10%    0.933      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124053414 and revision id 1743150. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124053813 and revision id 1743152. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
