Created page with "[[File:FreeCAD_Combo_view_Task_panel_ArchComponent.png|250px]]"

--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel &uacute;kol&#367; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -91,34 +91,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124054400
+Cached time: 20260124054407
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.158 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 403/1000000
 Post&#8208;expand include size: 32741/2097152 bytes
 Template argument size: 11981/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2284/5000000 bytes
+Unstrip post&#8208;expand size: 2285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.732      1 -total
- 27.73%   10.186      1 Template:Std_Base_navi/bg
- 22.44%    8.243      1 Template:Interface_navi/bg
- 19.51%    7.165      3 Template:Navigation_menu_2
- 17.87%    6.565      1 Template:Userdocnavi/bg
- 10.63%    3.906      2 Template:Caption
-  8.73%    3.208      1 Template:TOCright
-  5.91%    2.171      3 Template:KEY
-  4.41%    1.619      2 Template:Button
+100.00%   27.247      1 -total
+ 27.59%    7.516      1 Template:Std_Base_navi/bg
+ 25.71%    7.006      3 Template:Navigation_menu_2
+ 21.30%    5.803      1 Template:Interface_navi/bg
+ 14.06%    3.830      1 Template:Userdocnavi/bg
+ 10.45%    2.847      1 Template:TOCright
+ 10.09%    2.749      2 Template:Caption
+  8.82%    2.402      2 Template:Button
+  4.13%    1.125      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054400 and revision id 1743158. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054407 and revision id 1743158. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
