Created page with "* Потребителите, мигриращи от други CAD приложения, които използват клавиш {{KEY|ESC}} като част от работния им поток, могат да получат различни резултати във FreeCAD. Когато клавиш {{KEY|ESC}} е натиснат във FreeCAD, панелът Задачи, който има фокус, ще се затвори. За да деактивира..."

--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -7,7 +7,7 @@
 <li><a href="../pl/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel zada&#324; (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="Painel de tarefas (8% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="Panel &uacute;kol&#367; (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Task_Panel.html" class="mw-pt-progress mw-pt-progress--med" title="&#1055;&#1072;&#1085;&#1077;&#1083;&#1100; &#1079;&#1072;&#1076;&#1072;&#1095; (17% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Task_Panel.html" class="mw-pt-progress mw-pt-progress--complete" title="&#20219;&#21153;&#38754;&#26495; (100% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ko/Task_Panel.html" class="mw-pt-progress mw-pt-progress--low" title="&#51089;&#50629; &#54056;&#45328;(Task panel) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -30,7 +30,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span id=".D0.91.D0.B5.D0.BB.D0.B5.D0.B6.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;">&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;</span></h2>
-<ul><li>Users migrating from other CAD solutions that use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> key as part of their workflow may get different results in FreeCAD. When <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> is pressed in FreeCAD the Task Panel that has the focus will close. To disable this functionality, please see <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> and <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
+<ul><li>&#1055;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1080;&#1090;&#1077;, &#1084;&#1080;&#1075;&#1088;&#1080;&#1088;&#1072;&#1097;&#1080; &#1086;&#1090; &#1076;&#1088;&#1091;&#1075;&#1080; CAD &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1103;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> &#1082;&#1072;&#1090;&#1086; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1103; &#1080;&#1084; &#1087;&#1086;&#1090;&#1086;&#1082;, &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;&#1080; &#1074;&#1098;&#1074; FreeCAD. &#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> &#1077; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1072;&#1090; &#1074;&#1098;&#1074; FreeCAD, &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1080;&#1084;&#1072; &#1092;&#1086;&#1082;&#1091;&#1089;, &#1097;&#1077; &#1089;&#1077; &#1079;&#1072;&#1090;&#1074;&#1086;&#1088;&#1080;. &#1047;&#1072; &#1076;&#1072; &#1076;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1090;&#1077; &#1090;&#1072;&#1079;&#1080; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1086;&#1085;&#1072;&#1083;&#1085;&#1086;&#1089;&#1090;, &#1084;&#1086;&#1083;&#1103;, &#1074;&#1080;&#1078;&#1090;&#1077; <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> &#1080; <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -93,34 +93,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124054600
+Cached time: 20260124054739
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 404/1000000
 Post&#8208;expand include size: 33031/2097152 bytes
 Template argument size: 12126/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2285/5000000 bytes
+Unstrip post&#8208;expand size: 2289/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.352      1 -total
- 30.21%   12.189      1 Template:Std_Base_navi/bg
- 25.80%   10.410      3 Template:Navigation_menu_2
- 21.45%    8.655      1 Template:Userdocnavi/bg
- 20.99%    8.470      1 Template:Interface_navi/bg
-  7.88%    3.180      2 Template:Caption
-  6.98%    2.818      1 Template:TOCright
-  5.24%    2.113      2 Template:Button
-  4.41%    1.780      3 Template:KEY
+100.00%   28.504      1 -total
+ 40.43%   11.524      1 Template:Std_Base_navi/bg
+ 31.11%    8.866      3 Template:Navigation_menu_2
+ 21.66%    6.175      1 Template:Interface_navi/bg
+ 17.83%    5.081      1 Template:Userdocnavi/bg
+  5.13%    1.463      2 Template:Caption
+  4.38%    1.249      1 Template:TOCright
+  4.01%    1.142      2 Template:Button
+  3.78%    1.077      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054559 and revision id 1743163. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054739 and revision id 1743165. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
