Created page with "== Скриптове =="

--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -19,7 +19,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console.png&amp;filetimestamp=20190921064541&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console.png" decoding="async" width="600" height="277" class="mw-file-element" data-file-width="779" data-file-height="359"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python, &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1097;&#1072; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; FreeCAD &#1090;&#1086;&#1082;&#1091; &#1097;&#1086; &#1077; &#1089;&#1090;&#1072;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085;.</p>
-<h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
+<p><span id="Scripting"></span>
+</p>
+<h2><span id=".D0.A1.D0.BA.D1.80.D0.B8.D0.BF.D1.82.D0.BE.D0.B2.D0.B5"></span><span class="mw-headline" id="&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;">&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;</span></h2>
 <p><i>For absolute beginners, see:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, and <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
 </p><p><i>See also:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, and <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
 </p><p>The Python Console can perform basic code completion when a dot is written after an object; it will show public methods and attributes (variables) of the current object (class), for example, <code>obj.</code>
@@ -121,13 +123,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124060802
+Cached time: 20260124060831
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
+CPU time usage: 0.097 seconds
 Real time usage: 0.148 seconds
-Preprocessor visited node count: 529/1000000
+Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 31921/2097152 bytes
 Template argument size: 12065/2097152 bytes
 Highest expansion depth: 5/100
@@ -137,19 +139,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.481      1 -total
- 33.79%   14.353      1 Template:Std_Base_navi/bg
- 23.25%    9.876      3 Template:Navigation_menu_2
- 16.12%    6.846      1 Template:Interface_navi/bg
- 13.36%    5.677      1 Template:Userdocnavi/bg
-  5.98%    2.542      2 Template:Code
-  5.84%    2.482     11 Template:MenuCommand
-  5.22%    2.216      1 Template:TOCright
-  4.53%    1.926      6 Template:Incode
-  4.01%    1.702      2 Template:Caption
+100.00%   44.470      1 -total
+ 21.30%    9.472      1 Template:Std_Base_navi/bg
+ 18.79%    8.358      1 Template:Interface_navi/bg
+ 18.02%    8.014      3 Template:Navigation_menu_2
+ 13.78%    6.129      1 Template:Userdocnavi/bg
+  7.99%    3.551      2 Template:Code
+  6.35%    2.825      2 Template:Caption
+  6.12%    2.723      3 Template:Emphasis
+  5.53%    2.458      2 Template:KEY
+  5.14%    2.287      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060801 and revision id 1743185. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060831 and revision id 1743187. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
