Created page with "Конзолата също така е в състояние да покаже низ - документация на определена функция, когато бъде написана отваряща скоба, например {{incode|function(}}"

--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -25,7 +25,7 @@
 <p><i>For absolute beginners, see:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, &#1080; <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
 </p><p><i>See also:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, &#1080; <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
 </p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1080;&#1079;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1086; &#1079;&#1072;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1086;&#1076;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1090;&#1086;&#1095;&#1082;&#1072; &#1077; &#1085;&#1072;&#1087;&#1080;&#1089;&#1072;&#1085;&#1072; &#1089;&#1083;&#1077;&#1076; &#1086;&#1073;&#1077;&#1082;&#1090;; &#1090;&#1103; &#1097;&#1077; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1087;&#1091;&#1073;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1080; &#1072;&#1090;&#1088;&#1080;&#1073;&#1091;&#1090;&#1080; (&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1083;&#1080;&#1074;&#1080;) &#1085;&#1072; &#1090;&#1077;&#1082;&#1091;&#1097;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1082;&#1083;&#1072;&#1089;), &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088;, <code>obj.</code>
-</p><p>The console is also able to show the documentation string of a particular function when the opening parenthesis is written, for example, <code>function(</code>
+</p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1077; &#1074; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1085;&#1080;&#1079; - &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1072; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1087;&#1080;&#1089;&#1072;&#1085;&#1072; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103;&#1097;&#1072; &#1089;&#1082;&#1086;&#1073;&#1072;, &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088; <code>function(</code>
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console_example.png&amp;filetimestamp=20190921072538&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console_example.png" decoding="async" width="600" height="273" class="mw-file-element" data-file-width="779" data-file-height="354"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Example Python code that produces objects in the 3D view.</p>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061057
+Cached time: 20260124061241
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.146 seconds
+CPU time usage: 0.097 seconds
+Real time usage: 0.137 seconds
 Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 31921/2097152 bytes
 Template argument size: 12065/2097152 bytes
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.866      1 -total
- 22.26%    9.098      1 Template:Std_Base_navi/bg
- 19.90%    8.133      3 Template:Navigation_menu_2
- 17.90%    7.317      1 Template:Interface_navi/bg
- 12.82%    5.241      1 Template:Userdocnavi/bg
-  7.58%    3.097      3 Template:Emphasis
-  7.35%    3.002      6 Template:Incode
-  6.91%    2.825      2 Template:Code
-  6.25%    2.556      2 Template:Caption
-  5.27%    2.154      1 Template:TOCright
+100.00%   37.323      1 -total
+ 28.20%   10.525      1 Template:Std_Base_navi/bg
+ 21.87%    8.161      3 Template:Navigation_menu_2
+ 17.60%    6.567      1 Template:Interface_navi/bg
+ 17.38%    6.488      1 Template:Userdocnavi/bg
+  5.83%    2.174      2 Template:Code
+  5.17%    1.928      2 Template:KEY
+  4.80%    1.790      1 Template:TOCright
+  4.58%    1.708      2 Template:Caption
+  4.18%    1.560      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061057 and revision id 1743193. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061241 and revision id 1743196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
