--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -34,7 +34,7 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span> <span class="o">=</span> <span class="n">FreeCAD</span>
 <span class="n">Gui</span> <span class="o">=</span> <span class="n">FreeCADGui</span>
 </pre></div>
-<p>&#1057;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086; &#1090;&#1077; &#1089;&#1072; &#1088;&#1072;&#1074;&#1085;&#1080;:
+<p>&#1057;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086; &#1090;&#1086;&#1074;&#1072; &#1077; &#1088;&#1072;&#1074;&#1085;&#1086;&#1089;&#1080;&#1083;&#1085;&#1086; &#1085;&#1072;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
 <span class="n">FreeCAD</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061703
+Cached time: 20260124061851
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.094 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 32029/2097152 bytes
 Template argument size: 12136/2097152 bytes
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.759      1 -total
- 23.73%   11.332      1 Template:Std_Base_navi/bg
- 19.71%    9.415      1 Template:Userdocnavi/bg
- 17.55%    8.381      1 Template:Interface_navi/bg
- 17.37%    8.294      3 Template:Navigation_menu_2
-  6.32%    3.017      6 Template:Incode
-  6.30%    3.011      2 Template:Code
-  4.95%    2.362      1 Template:TOCright
-  4.66%    2.224      2 Template:Caption
-  4.63%    2.213     11 Template:MenuCommand
+100.00%   36.849      1 -total
+ 25.88%    9.535      1 Template:Std_Base_navi/bg
+ 22.03%    8.117      3 Template:Navigation_menu_2
+ 17.77%    6.550      1 Template:Interface_navi/bg
+ 13.92%    5.130      1 Template:Userdocnavi/bg
+  7.63%    2.810      2 Template:Code
+  6.02%    2.219      6 Template:Incode
+  5.61%    2.068      1 Template:TOCright
+  5.39%    1.986      2 Template:KEY
+  4.53%    1.668     11 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061702 and revision id 1743206. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061851 and revision id 1743208. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
