Created page with "== Контекстно меню =="

--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -40,8 +40,9 @@
 <span class="n">FreeCAD</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
 </pre></div>
 <p><i>Breote:</i> &#1090;&#1077;&#1079;&#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080; &#1080; &#1087;&#1089;&#1077;&#1074;&#1076;&#1086;&#1085;&#1080;&#1084;&#1080; &#1089;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080; &#1089;&#1072;&#1084;&#1086; &#1086;&#1090; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python, &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1072; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; FreeCAD. &#1040;&#1082;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; FreeCAD &#1082;&#1072;&#1090;&#1086; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072; &#1074;&#1098;&#1074; &#1074;&#1098;&#1085;&#1096;&#1085;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;, &#1090;&#1088;&#1103;&#1073;&#1074;&#1072; &#1087;&#1086;&#1084;&#1085;&#1080;&#1090;&#1077; &#1076;&#1072; &#1079;&#1072;&#1088;&#1077;&#1076;&#1080;&#1090;&#1077; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080;&#1090;&#1077; <code>FreeCAD</code> &#1080; <code>FreeCADGui</code> &#1080; &#1076;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1080;&#1090;&#1077; &#1085;&#1077;&#1086;&#1073;&#1093;&#1086;&#1076;&#1080;&#1084;&#1080;&#1090;&#1077; &#1087;&#1089;&#1077;&#1074;&#1076;&#1086;&#1085;&#1080;&#1084;&#1080;, &#1072;&#1082;&#1086; &#1078;&#1077;&#1083;&#1072;&#1077;&#1090;&#1077;.
+</p><p><span id="Context_menu"></span>
 </p>
-<h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
+<h2><span id=".D0.9A.D0.BE.D0.BD.D1.82.D0.B5.D0.BA.D1.81.D1.82.D0.BD.D0.BE_.D0.BC.D0.B5.D0.BD.D1.8E"></span><span class="mw-headline" id="&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086;_&#1084;&#1077;&#1085;&#1102;">&#1050;&#1086;&#1085;&#1090;&#1077;&#1082;&#1089;&#1090;&#1085;&#1086; &#1084;&#1077;&#1085;&#1102;</span></h2>
 <p>Right-clicking the Python Console opens a context menu with the following commands: 
 </p>
 <ul><li><b>Copy</b>: stores the selected text in the clipboard for later pasting; it is disabled if nothing is selected.</li>
@@ -123,13 +124,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124062006
+Cached time: 20260124062016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 530/1000000
+CPU time usage: 0.100 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 531/1000000
 Post&#8208;expand include size: 32031/2097152 bytes
 Template argument size: 12138/2097152 bytes
 Highest expansion depth: 5/100
@@ -139,19 +140,19 @@ Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.065      1 -total
- 29.98%    8.414      1 Template:Std_Base_navi/bg
- 23.51%    6.598      3 Template:Navigation_menu_2
- 19.02%    5.337      1 Template:Interface_navi/bg
- 13.39%    3.759      1 Template:Userdocnavi/bg
-  6.37%    1.788      2 Template:Code
-  4.87%    1.368     11 Template:MenuCommand
-  4.74%    1.330      2 Template:Caption
-  4.48%    1.258      1 Template:TOCright
-  4.41%    1.237      6 Template:Incode
+100.00%   31.417      1 -total
+ 30.58%    9.607      1 Template:Std_Base_navi/bg
+ 27.19%    8.541      3 Template:Navigation_menu_2
+ 14.62%    4.594      1 Template:Userdocnavi/bg
+ 14.34%    4.505      1 Template:Interface_navi/bg
+  6.62%    2.080      2 Template:Caption
+  5.53%    1.737     11 Template:MenuCommand
+  5.53%    1.737      2 Template:Code
+  5.26%    1.653      3 Template:Emphasis
+  4.13%    1.297      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062006 and revision id 1743210. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062016 and revision id 1743212. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
