Created page with "{{Docnav |[[Mouse_navigation|Mouse navigation]] |[[Navigation_Cube|Navigation Cube]] }}"

--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -104,12 +104,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124070240
+Cached time: 20260124070252
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.071 seconds
-Real time usage: 0.113 seconds
+Real time usage: 0.107 seconds
 Preprocessor visited node count: 275/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -120,19 +120,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.923      1 -total
- 24.99%    5.978      1 Template:Userdocnavi/bg
- 11.19%    2.678      1 Template:Navigation_menu_2
- 11.13%    2.663      3 Template:Code
- 10.68%    2.555      1 Template:Caption
-  9.99%    2.391      3 Template:Incode
-  9.50%    2.272      1 Template:Button
-  9.45%    2.260      1 Template:MenuCommand
-  8.21%    1.964      2 Template:Docnav
-  6.26%    1.498      1 Template:TOCright
+100.00%   20.010      1 -total
+ 35.48%    7.099      1 Template:Userdocnavi/bg
+ 14.89%    2.980      1 Template:Navigation_menu_2
+ 12.29%    2.458      2 Template:Docnav
+ 11.84%    2.369      3 Template:Code
+  7.54%    1.509      1 Template:Caption
+  6.49%    1.298      3 Template:Incode
+  5.59%    1.119      4 Template:KEY
+  5.40%    1.080      1 Template:TOCright
+  5.11%    1.023      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070239 and revision id 1743226. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070252 and revision id 1743226. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
